@@ -1,5 +1,7 @@
 2012-03-06  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* Preparing 4.8.0 release candidate.
+
 	* nad/epsg: regenerate with +no_uoff for hotine oblique mercator (#104)
 
 	* src/PJ_sconics.c: Fix missing P->sig term in pconic forward
